Add allow_set_spawn, allow_buying, xp_on_discover and xp_to_give options

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,7 @@
 no_damage: false
 no_damage_time: 10
+allow_set_spawn: false
+allow_buying: false
+xp_on_discover: false
+xp_to_give: 3
 debug: false
