Added finalName for build

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         </repository>
     </repositories>
     <build>
+        <finalName>DiscoverWarps</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
