--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.eccentric_.plugins.discoverwarps</groupId>
     <artifactId>DiscoverWarps</artifactId>
-    <version>1.2.4</version>
+    <version>1.3</version>
     <name>DiscoverWarps</name>
     <repositories>
         <repository>
@@ -16,6 +16,10 @@
         <repository>
             <id>onarandombox</id>
             <url>http://repo.onarandombox.com/content/groups/public</url>
+        </repository>
+        <repository>
+            <id>sk89q-repo</id>
+            <url>http://maven.sk89q.com/repo/</url>
         </repository>
     </repositories>
     <build>
@@ -36,14 +40,14 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.7.2-R0.1-SNAPSHOT</version>
+            <version>LATEST</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>ci.herocraftonline.com</groupId>
+            <groupId>net.milkbowl.vault</groupId>
             <artifactId>vault</artifactId>
-            <version>1.2.25</version>
+            <version>1.2.30</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
@@ -91,6 +95,36 @@
             <groupId>multiworld</groupId>
             <artifactId>MultiWorld</artifactId>
             <version>5.0.0</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.sk89q</groupId>
+            <artifactId>worldguard</artifactId>
+            <version>5.8.1-SNAPSHOT</version>
+            <type>jar</type>
+            <exclusions>
+                <exclusion>
+                    <artifactId>opencsv</artifactId>
+                    <groupId>net.sf.opencsv</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>prtree</artifactId>
+                    <groupId>org.khelekore</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>iconomy</artifactId>
+                    <groupId>com.nijikokun</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>commandbook</artifactId>
+                    <groupId>com.sk89q</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.sk89q</groupId>
+            <artifactId>worldedit</artifactId>
+            <version>5.5.9-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
     </dependencies>
