--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ dev-url: http://dev.bukkit.org/server-mods/discoverwarps/
 description: Adds Skyrim type warps to Minecraft Server
 main: me.eccentric_nz.plugins.discoverwarps.DiscoverWarps
 name: DiscoverWarps
-startup: postworld
+load: POSTWORLD
 version: '1.3'
 softdepend: [Vault,Multiverse-Core,MultiWorld,WorldGuard]
 permissions:
