--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,6 +11,7 @@ localisation:
     not_plate: You are not standing on a pressure plate
     name_in_use: That name is already in use!
     no_plate_name: Couldn't find a DiscoverPlate with that name!
+    no_player: There is no player with that name online!
     only_player: This command requires a player!
     cost: The last argument must be a number!
     none_set: There are no DiscoverPlates to find!
