--- a/pom.xml
+++ b/pom.xml
@@ -91,10 +91,10 @@
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>vault</artifactId>
-            <version>1.6.6</version>
+            <version>1.6.7</version>
             <type>jar</type>
             <scope>system</scope>
-            <systemPath>${basedir}/lib/Vault-1.6.6.jar</systemPath>
+            <systemPath>${basedir}/lib/Vault.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.onarandombox.multiversecore</groupId>
