--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ main: me.eccentric_nz.discoverwarps.DiscoverWarps
 name: DiscoverWarps
 load: POSTWORLD
 version: 1.7.5
-api-version: 1.19
+api-version: '1.20'
 softdepend: [Vault,Multiverse-Core,MultiWorld,WorldGuard]
 permissions:
   discoverwarps.use:
